--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.2",
+    "lnurl-pay": "^2.0.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
