--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.2",
-    "lnurl-pay": "^2.0.1",
+    "lnurl-pay": "2.1.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
